--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,9 +8,13 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write   # <-- fondamentale per fare push
     steps:
       - name: Clona il repository
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true   # usa il GITHUB_TOKEN per pushare
 
       - name: Imposta Python
         uses: actions/setup-python@v5
@@ -25,8 +29,8 @@ jobs:
 
       - name: Commit e push modifiche
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ita.m3u
-          git commit -m "Aggiornamento automatico playlist"
+          git commit -m "Aggiornamento automatico playlist" || echo "Nessuna modifica"
           git push
